force-app/main/default/objects/CF_Voice_Call__c/CF_Voice_Call__c.object-meta.xml
<CustomObject>
    <label>Voice Call</label>
    <nameField>
        <displayFormat>VC-{00000000}</displayFormat>
        <label>Voice Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voice Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>