force-app/main/default/objects/CF_Voice_Call__c/fields/CF_Agent__c.field-meta.xml
<CustomField>
    <fullName>CF_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Voice Calls</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>