force-app/main/default/objects/CF_Voice_Call__c/fields/CF_AI_Evaluated__c.field-meta.xml
<CustomField>
    <fullName>CF_AI_Evaluated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Evaluated</label>
    <type>Checkbox</type>
</CustomField>