force-app/main/default/objects/CF_Voice_Call__c/fields/CF_Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>CF_Call_Duration__c</fullName>
    <label>Call Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>