force-app/main/default/objects/CF_Voice_Call__c/fields/CF_Call_Ended__c.field-meta.xml
<CustomField>
    <fullName>CF_Call_Ended__c</fullName>
    <label>Call Ended</label>
    <type>DateTime</type>
</CustomField>