force-app/main/default/objects/CF_Voice_Call__c/fields/CF_Call_Result__c.field-meta.xml
<CustomField>
    <fullName>CF_Call_Result__c</fullName>
    <label>Call Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>