force-app/main/default/objects/CF_Voice_Call__c/fields/CF_Call_Started__c.field-meta.xml
<CustomField>
    <fullName>CF_Call_Started__c</fullName>
    <label>Call Started</label>
    <type>DateTime</type>
</CustomField>