force-app/main/default/objects/CF_Voice_Call__c/fields/CF_Call_Summary__c.field-meta.xml
<CustomField>
    <fullName>CF_Call_Summary__c</fullName>
    <label>Call Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>