force-app/main/default/objects/CF_Voice_Call__c/fields/CF_Caller_Number__c.field-meta.xml
<CustomField>
    <fullName>CF_Caller_Number__c</fullName>
    <label>Caller Number</label>
    <type>Phone</type>
</CustomField>