force-app/main/default/objects/CF_Voice_Call__c/fields/CF_Related_Record__c.field-meta.xml
<CustomField>
    <fullName>CF_Related_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Record</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Voice Calls</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>